[package]
name = "oven"
version = "0.4.0"
authors = ["XMPPwocky <nttheis@gmail.com>", "Markus Kohlhase <mail@markus-kohlhase.de>"]
repository = "https://github.com/flosse/oven"
description = "Simple cookie management for Iron"
license = "MIT"

[dependencies]
iron = "^0.4.0"
plugin = "^0.2.6"

[dependencies.cookie]
git = "https://github.com/alexcrichton/cookie-rs"
rev = "c9e707263f6633c8828a8eaac5e0439bff0e286e"
features = ["secure"]
